fix slider button issue on mobile scree

--- a/app/styles/css/style.css
+++ b/app/styles/css/style.css
@@ -1256,7 +1256,6 @@ border-radius: 10px;
 border: none;
 outline: none;
 white-space: nowrap;
-
 }
 
 .btn-grad:hover {
@@ -1315,7 +1314,9 @@ color: #2c3e50;
 	width: 200px;
 	height: auto;
 	}
-
+  .btn-grad{
+	margin: 5px;
+  }
 
 }
          
